# simple-agent

./: .env.example  .gitignore  APPLICATION.md  CHANGES.md  Dockerfile  ENHANCEMENT_SUMMARY.md  PIPELINE_INTEGRATION.md  README.md  REFACTOR_PLAN.md  SIMPLEAGENT_TECHNICAL_DOC.md  app.py  demo.py  docker-compose.yml  enhanced_state.json  pyproject.toml  run.py  run_server.py  server.py  start.bat  start.py  test_api.py  test_auth.py  test_compare.py  test_e2e.py  test_enhanced.py  test_enhanced_features.py  test_graph.py  test_graph_engine.py  test_hallucination.py  test_multi_turn.py  test_pipeline.py  test_sdk.py  test_sdk2.py  test_sdk3.py  test_sdk4.py  test_v2_features.py  三段论导出_20260429_145821.csv
.github/workflows/: ci.yml
benchmarks/: compare.py
checkpoints/: greeting_0a1cad67e2a4.json  greeting_34dd9bc8c86c.json  greeting_ea68a13a699c.json  llm_call_0a1cad67e2a4.json  llm_call_34dd9bc8c86c.json  llm_call_ea68a13a699c.json
examples/code_review/: README.md  __init__.py  main.py
examples/code_review/tools/: git_diff.py
memory/: facts.json  lessons.md
src/my_agent/: __init__.py  a2a.py  agent.py  cli.py  llm.py  mcp_client.py  memory.py  message.py  multiagent.py  routing.py
src/my_agent/bridge/: __init__.py  base.py  permissions.py
src/my_agent/cli/: __init__.py  repl.py
src/my_agent/core/: __init__.py  engine.py  hooks.py
src/my_agent/enhanced/: __init__.py  deterministic_citation.py  hallucination_detector.py  multi_index_retrieval.py  persona_memory.py  query_router.py  (+1 more)
static/: app.js  index.html  style.css
web/: index.html
(+23 files in other folders)
