[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-agent"
version = "0.1.0"
description = "zwy的agent"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
my-agent = "my_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
